--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,10 @@ canvas.fullscreen {
   width: 100vw; 
   height: 100vh; 
 }
+
+canvas#texture {
+  display: inline-block;
+  position: fixed;
+  top:0px;
+  left:0px;
+}
